--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,7 +48,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 2 # Fetch at least one commit of history
+          fetch-depth: 0 # Fetch all history for better Git operations
+          fetch-tags: true # Fetch all tags
       - name: Safety vulnerability scan
         uses: pyupio/safety-action@v1
         with:
@@ -88,8 +89,14 @@ jobs:
           trivy --cache-dir ~/.cache/trivy image --download-db-only
           # Only scan changed files in PRs and pushes
           if [ "${{ github.event_name }}" == "pull_request" ]; then
-            # For PRs, scan only changed directories
-            CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT origin/${{ github.base_ref }} ${{ github.sha }} | xargs -n1 dirname 2>/dev/null | sort -u | tr '\n' ' ')
+            # For PRs, ensure we fetch the base branch first
+            git fetch origin ${{ github.base_ref }} || echo "Could not fetch base branch, falling back to minimal scan"
+            if git rev-parse --verify origin/${{ github.base_ref }} >/dev/null 2>&1; then
+              CHANGED_DIRS=$(git diff --name-only --diff-filter=ACMRT origin/${{ github.base_ref }} ${{ github.sha }} | xargs -n1 dirname 2>/dev/null | sort -u | tr '\n' ' ')
+            else
+              echo "Base branch not found, performing minimal scan"
+              CHANGED_DIRS=""
+            fi
           else
             # For pushes, try to get changed directories in the last commit
             if git rev-parse --verify HEAD^ >/dev/null 2>&1; then
