--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -92,7 +92,7 @@ repos:
 
       - id: pytest-rag-evaluation
         name: RAG Evaluation Tests
-        entry: pytest tests/test_rag_evaluation.py -v
+        entry: pytest tests/test_rag_evaluation.py -v -W ignore::DeprecationWarning
         language: system
         pass_filenames: false
         always_run: true
@@ -100,7 +100,7 @@ repos:
 
       - id: run-all-tests
         name: Run All Tests
-        entry: pytest
+        entry: pytest -W ignore::DeprecationWarning
         language: system
         pass_filenames: false
         always_run: false  # Only run when explicitly called or on push
