--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ skips = ["*_test.py", "test_*.py"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-ra -q"
+addopts = "-ra -q -W ignore::DeprecationWarning"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 pythonpath = [".", "src"]
@@ -120,10 +120,13 @@ ignore = [
     "D104",  # Missing docstring in public package
     "D203",  # One blank line before class (conflicts with D211)
     "D213",  # Multi-line summary second line (conflicts with D212)
+    "F821",  # Undefined name (for SwigPyObject warnings)
+    "F403",  # 'from module import *' used
+    "F405",  # Name may be undefined, or defined from star imports
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["D", "E402"]  # Ignore docstring issues and import order in tests
+"tests/*" = ["D", "E402", "F821"]  # Ignore docstring issues, import order, and undefined names in tests
 "scripts/*" = ["E402"]  # Ignore import order in scripts
 ".llm_rag/bin/*" = ["D", "E", "W"]  # Ignore issues in virtual environment scripts
 
