--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "torch>=2.1.0",
     "transformers>=4.49.0",
     "uvicorn>=0.34.0",
+    "defusedxml>=0.7.1",  # For secure XML parsing
     # Temporarily commented out to handle separately in Dockerfile
     # "llama-cpp-python>=0.2.56",
     # Hugging Face dependencies
