Fix mypy namespace collision between loaders.py and loaders/__init__.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,8 +147,7 @@ warn_redundant_casts = true
 warn_unused_ignores = false
 warn_no_return = true
 warn_unreachable = false
-exclude = ["scripts"]
-ignore_missing_imports = true
+exclude = ["scripts"]  # Only exclude scripts directory
 namespace_packages = true
 explicit_package_bases = true
 error_summary = false
