--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -242,6 +242,8 @@ jobs:
           format: "sarif"
           output: "trivy-container-results.sarif"
           severity: "CRITICAL,HIGH"
+          exit-code: "0" # Don't fail the workflow when vulnerabilities are found
+          ignore-unfixed: true
 
       # Enhanced container security scan using custom configuration
       - name: Run enhanced Trivy container scan
