--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,7 +77,7 @@ repos:
       # Add Safety check for dependencies
       - id: safety-check
         name: Check for vulnerable dependencies with Safety
-        entry: bash -c "echo 'y' | SAFETY_API_KEY=${SAFETY_API_KEY:-} safety scan --policy-file .safety-policy.yml --skip-update || echo 'Safety check failed but continuing'"
+        entry: bash -c "SAFETY_CACHE_DIR=/tmp SAFETY_API_KEY=${SAFETY_API_KEY:-} safety scan --policy-file .safety-policy.yml || echo 'Safety check failed but continuing'"
         language: system
         pass_filenames: false
         stages: [pre-push]  # Changed from pre-commit to pre-push to run only when pushing
