--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pandas>=2.2.0",
     "pytest>=8.3.4",
     "pypdf>=3.9.0",
+    "rich>=13.3.5",
     "scikit-learn>=1.6.1",
     "sentence-transformers>=2.2.2",
     "tiktoken>=0.9.0",
